# powermeter

./: .dockerignore  .env.example  .gitignore  Pipfile  README.md  db.sqlite  docker-compose.yml  expressions.py  load_envs.sh  manage.py  performance.py  performance.py.txt  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml
activity2/: activity.py
config/: api.py  api_router.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py
docker/: Dockerfile
docker/envs/: .django
docker/scripts/: entrypoint.sh
docs/: graphql.txt
powermeter/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
powermeter/graphql/: schemas.py
powermeter/meters/: admin.py  apps.py  models.py  schema.py  schema_relay.py  singals.py  urls.py
powermeter/meters/api/: serializers.py  views.py
powermeter/meters/management/commands/: populate_db.py
powermeter/meters/migrations/: 0001_initial.py  0002_timestampmodel.py
powermeter/templates/: base.html
powermeter/users/: admin.py  apps.py  models.py  urls.py
powermeter/users/api/: views.py
